Fixed layout issues

--- a/assets/styles/layouts/_feed.scss
+++ b/assets/styles/layouts/_feed.scss
@@ -63,7 +63,7 @@
     }
   }
   .feed-item__header {
-    padding: $spacing-large 0;
+    padding: $spacing-large 0 0;
     width: 100%;
     /*border-bottom: 1px solid $color-dark;*/
   }
